<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/HomeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    android:padding="20dp"
    tools:context=".HomeActivity">

    <!-- LOADING IMAGE VIEW -->

    <ImageView
        android:id="@+id/LoadingView"
        android:visibility="invisible"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TITLE -->

    <LinearLayout
        android:id="@+id/Home_LinearLayout_TOP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nanumsquareeb"
            android:text="@string/Home_Title"
            android:textColor="@color/black"
            android:textSize="28dp"
            tools:ignore="SpUsage" />

        <ImageButton
            android:id="@+id/Home_ImageButton_User"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/Home_userButton"
            android:visibility="invisible"
            app:srcCompat="@drawable/user_ico" />

    </LinearLayout>

    <!-- GET DEPARTURE and ARRIVAL LAYOUT-->

    <LinearLayout
        android:id="@+id/Home_LinearLayout_CENTER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_shape"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Home_LinearLayout_TOP">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquareb"
                android:text="@string/Home_departure"
                android:textColor="@color/semiBlack"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/Home_EditText_departure"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_shape"
                android:fontFamily="@font/nanumsquarer"
                android:inputType="text"
                android:lines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="Autofill,LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="start|center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Home_ImageView_DownArrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                app:srcCompat="@drawable/downarrow"
                android:contentDescription="@string/Home_downarrow" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquareb"
                android:text="@string/Home_arrival"
                android:textColor="@color/semiBlack"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/Home_EditText_arrival"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_shape"
                android:fontFamily="@font/nanumsquarer"
                android:inputType="text"
                android:lines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="Autofill,LabelFor" />

        </LinearLayout>

    </LinearLayout>

    <!-- MY PLACE AND SEARCH HISTORY LAYOUT-->

    <LinearLayout
        android:id="@+id/Home_LinearLayout_Bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_shape"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Home_LinearLayout_CENTER">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:fontFamily="@font/nanumsquareb"
                android:text="@string/Home_myPlace"
                android:textColor="#505050"
                android:textSize="18dp"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/Home_Button_EditMyPlace"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginEnd="14dp"
                android:background="#00FFFFFF"
                android:text="@string/Home_edit"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent"
                android:textSize="14dp"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <ListView
            android:id="@+id/Home_ListView_myPlace"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:fontFamily="@font/nanumsquareb"
                android:text="@string/Home_recent"
                android:textColor="#505050"
                android:textSize="18dp"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/Home_Button_DeleteRecent"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginEnd="14dp"
                android:background="#00FFFFFF"
                android:text="@string/Home_deleteRecent"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent"
                android:textSize="14dp"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <ListView
            android:id="@+id/Home_ListView_recent"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="14dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>